src/tests/benchmarks/SemanticErrors/invalidUnaryOperation.c
#include <stdio.h>

int main(){
        printf("%s; ", 9);
        printf("%d; ", --11);
        return 1;
}
